Try to fix z-index.

--- a/s_01_src/110wbs_src/src/components/atms/Map.scss
+++ b/s_01_src/110wbs_src/src/components/atms/Map.scss
@@ -2,7 +2,7 @@
 
 .leaflet-container {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: auto;
   pointer-events: none;
   z-index: 1;
